[package]
name = "pdb"
version = "0.1.0"
authors = ["Philip Munksgaard <philip@munksgaard.me>"]
edition = "2018"
default-run = "pdb"

[dependencies]
pest = "2.1.1"
pest_derive = "2.1.0"
anyhow = "1.0.33"
rustyline = "6.3.0"
serde = "1.0.116"
serde_derive = "1.0"
serde-lexpr = "0.1.0"
tokio = { version = "0.2.22", features = ["full"] }
crossbeam = "0.8.0"
structopt = { version = "0.2.18", features = ["paw"] }
paw = "1.0.0"
